# TaskForce

./: .pre-commit-config.yaml  Dockerfile.dev  README.MD
.devcontainer/: devcontainer.json
.github/workflows/: lint_commit.yml  run_ruffus_tests.yml
app/: main.py  pyproject.toml
app/crews/instagram_post/: agents.py  crew.py
app/crews/meeting_prep/: agents.py  crew.py  test_crew.py
app/crews/product_photographer/: agents.py  crew.py  tasks.py  test_crew.py
app/crews/stock_analysis/: test.py
app/crews/template_crew/: agents.py  tasks.py
app/crews/trip_planner/: crew.py
app/lib/: models.py  tasks_utills.py
app/lib/interfaces/: CrewManager.py  TestInterface.py
app/lib/tools/: browser_tools.py  search_tools.py  sec_tools.py
taskforce/: .env.example  .gitignore  Makefile
taskforce/crews/instagram_post/: agents.py  tasks.py  test_crew.py
taskforce/crews/meeting_prep/: crew.py  tasks.py
taskforce/crews/product_photographer/: agents.py
taskforce/crews/stock_analysis/: agents.py  crew.py  tasks.py  test_crew.py
taskforce/crews/template_crew/: crew.py
taskforce/crews/trip_planner/: agents.py  tasks.py  test_crew.py
taskforce/lib/interfaces/: CrewManager.py
taskforce/lib/tools/: calculator_tools.py  exa_search_tools.py
